--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
+  background-color: #000721;
 }
 
 .App-logo {
